--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-i# French translations for PROJECT.
+# French translations for PROJECT.
 # Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
